@@ -48,7 +48,7 @@ Additions:
    > Dark Orb
    > Ice II
    > Wyvern's Fury
- - Added 81 new items:
+ - Added 82 new items:
   ~ 12 recovery/buff items:
    > Well-Rounded Combination
    > Large Potion
@@ -92,11 +92,12 @@ Additions:
    > Mage Token
    > Cleric Token
    > Rogue Token
-  ~ 12 upgraders:
+  ~ 13 upgraders:
    > ATK Scroll ★
    > MAT Scroll ★
    > DEF Scroll ★
    > MDF Scroll ★
+   > EVA Scroll
    > PDR Scroll
    > MDR Scroll
    > GRD Scroll
